# redis-sacsc

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
docs/: conf.py  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
redis_sacsc/: __init__.py  cache.py  client.py  crc.py  pubssub_thread.py  redis_manager.py
tests/: test_crc.py
